<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFEFEF"
        android:padding="10dp">

        <ImageView
            android:id="@+id/conn_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/activity_connect_account_settings_disconnected" />

        <TextView
            android:id="@+id/conn_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/conn_image"
            android:background="@drawable/connected_account_border"
            android:paddingLeft="14dp"
            android:paddingTop="8dp"
            android:paddingRight="14dp"
            android:paddingBottom="8dp"
            android:text="User account"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/sign_out_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/conn_account_name"
            android:layout_alignParentEnd="true"
            android:background="@drawable/active_border2"
            android:paddingLeft="14dp"
            android:paddingTop="8dp"
            android:paddingRight="14dp"
            android:paddingBottom="8dp"
            android:text="@string/sign_out_text"
            android:textColor="#FFFFFFFF" />

    </RelativeLayout>

    <!--    <ImageView
            android:id="@+id/courier_icn"
            android:layout_width="20dp"
            android:layout_height="35dp"
            android:layout_below="@id/title_layer"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/activity_tracking_add_v2_tracking_account_number" />

        <TextView
            android:id="@+id/text_courier_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/courier_name_title"
            android:textSize="16dp"
            android:textColor="#37474F"
            android:layout_toRightOf="@id/courier_icn"
            android:layout_alignBottom="@id/courier_icn"/>
    -->

    <RelativeLayout
        android:id="@+id/info_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layer"
        android:background="#EFEFEF"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_courier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/active_border"
            android:clickable="false"
            android:paddingLeft="14dp"
            android:paddingTop="8dp"
            android:paddingRight="14dp"
            android:paddingBottom="8dp"
            android:layout_alignParentStart="true"
            android:text="@string/all_couriers"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text_courier_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_courier_name"
            android:layout_toRightOf="@id/text_courier_name"
            android:background="@drawable/active_border"
            android:clickable="false"
            android:paddingLeft="14dp"
            android:paddingTop="8dp"
            android:paddingRight="14dp"
            android:paddingBottom="8dp"
            android:text="@string/default_courier_date"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_change_view"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:background="#42A5F5"
            android:enabled="false"
            android:text="@string/change_parcel_view"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />
    </RelativeLayout>

    <!--    <ImageView
            android:id="@+id/date_icon"
            android:layout_width="20dp"
            android:layout_height="35dp"
            app:srcCompat="@mipmap/activity_tracking_add_v2_tracking_ship_date"
            android:layout_below="@id/courier_icn"
            android:layout_marginTop="15dp"
            android:layout_alignLeft="@id/courier_icn"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/text_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_toRightOf="@id/date_icon"
            android:padding="5dp"
            android:text="@string/courier_date_title"
            android:textColor="#37474F"
            android:layout_alignBottom="@id/date_icon"

            android:layout_alignBaseline="@id/date_icon"
            android:textSize="16dp" />
    -->

    <!--
    <RelativeLayout
        android:id="@+id/btn_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_date_title">
        <Button
            android:id="@+id/btn_update"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="#42A5F5"
            android:layout_alignParentStart="true"
            android:text="@string/update_parcel_list"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:visibility="invisible" />

        <View
            android:id="@+id/dummy_view"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/btn_update"/>
 </RelativeLayout>
-->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/show_item_num"
        android:layout_marginTop="5dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ListView
            android:id="@+id/db_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>

    </ScrollView>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/info_layer"
        android:layout_marginTop="2dp"
        android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/show_item_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="2dp"
        android:background="#EFEFEF"
        android:paddingLeft="14dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#AFAFAF"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="0/0개 배송 완료됨"
        android:textAlignment="viewEnd"
        android:textColor="#6F6F6F"
        android:textSize="14dp" />



</RelativeLayout>